--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -112,6 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/red"
+        android:fitsSystemWindows="true"
         app:itemIconSize="24dp"
         app:itemTextAppearanceActive="@style/SmallText"
         app:itemTextAppearanceInactive="@style/SmallText"
