--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,9 +14,9 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/chat"
-        android:icon="@drawable/baseline_text_snippet_24"
-        android:title="Chat"
+        android:id="@+id/cart"
+        android:icon="@drawable/baseline_shopping_cart_24"
+        android:title="cart"
         app:showAsAction="always" />
 
     <item
