--- a/app/src/main/res/layout/activity_cart_item.xml
+++ b/app/src/main/res/layout/activity_cart_item.xml
@@ -7,13 +7,6 @@
     tools:context=".CartItem">
 
     <!-- Shopping Cart Title -->
-    <ImageButton
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        tools:srcCompat="@drawable/back" />
     <TextView
         android:id="@+id/cartTitle"
         android:layout_width="wrap_content"
@@ -41,11 +34,13 @@
         android:id="@+id/totalLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
 
         <!-- Subtotal -->
         <LinearLayout
@@ -53,19 +48,21 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/subtotalLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Subtotal:"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/subtotalValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="$71.66"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"/>
+                android:textSize="16sp" />
         </LinearLayout>
 
         <!-- Delivery Charge -->
@@ -74,19 +71,21 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/deliveryLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Delivery:"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/deliveryValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="$12.00"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"/>
+                android:textSize="16sp" />
         </LinearLayout>
 
         <!-- Total -->
@@ -95,21 +94,23 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/totalLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Total:"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/totalValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="$83.66"
                 android:textSize="18sp"
-                android:layout_marginStart="8dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
 
@@ -119,7 +120,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Checkout"
-            android:textColor="#fff"
-            />
+            android:textColor="#fff" />
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/red"
+        android:fitsSystemWindows="true"
+        app:itemIconSize="24dp"
+        app:itemTextAppearanceActive="@style/SmallText"
+        app:itemTextAppearanceInactive="@style/SmallText"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
